--- a/genindex.html
+++ b/genindex.html
@@ -6558,12 +6558,20 @@
         <li><a href="source/evmspec.html#evmspec.uints.uint96.__xor__">(evmspec.uints.uint96 method)</a>
 </li>
       </ul></li>
+      <li><a href="source/evmspec.trace.html#evmspec.trace.create.Trace._action">_action (evmspec.trace.create.Trace attribute)</a>
+
+      <ul>
+        <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Trace._action">(evmspec.trace.reward.Trace attribute)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/evmspec.html#evmspec.data.TransactionHash.a_sync">a_sync (evmspec.data.TransactionHash attribute)</a>
+</li>
       <li><a href="source/evmspec.html#evmspec.transaction.Transaction1559.accessList">accessList (evmspec.transaction.Transaction1559 property)</a>
 
       <ul>
@@ -6601,7 +6609,7 @@
 </li>
         <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Trace.action">(evmspec.trace.reward.Trace property)</a>
 </li>
-        <li><a href="source/evmspec.trace.html#evmspec.trace.suicide.Trace.action">(evmspec.trace.suicide.Trace attribute)</a>
+        <li><a href="source/evmspec.trace.html#evmspec.trace.suicide.Trace.action">(evmspec.trace.suicide.Trace attribute)</a>, <a href="source/evmspec.trace.html#id11">[1]</a>
 </li>
       </ul></li>
       <li><a href="source/evmspec.html#evmspec.data.Address">Address (class in evmspec.data)</a>
@@ -6615,7 +6623,7 @@
 </li>
         <li><a href="source/evmspec.html#evmspec.log.SmallLog.address">(evmspec.log.SmallLog attribute)</a>
 </li>
-        <li><a href="source/evmspec.trace.html#evmspec.trace.create.Result.address">(evmspec.trace.create.Result attribute)</a>
+        <li><a href="source/evmspec.trace.html#evmspec.trace.create.Result.address">(evmspec.trace.create.Result attribute)</a>, <a href="source/evmspec.trace.html#id2">[1]</a>
 </li>
         <li><a href="source/evmspec.html#evmspec.transaction.AccessListEntry.address">(evmspec.transaction.AccessListEntry attribute)</a>
 </li>
@@ -6802,7 +6810,7 @@
 </li>
       <li><a href="source/evmspec.html#evmspec.log.Topic.as_uint96">as_uint96 (evmspec.log.Topic property)</a>
 </li>
-      <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Action.author">author (evmspec.trace.reward.Action attribute)</a>
+      <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Action.author">author (evmspec.trace.reward.Action attribute)</a>, <a href="source/evmspec.trace.html#id6">[1]</a>
 </li>
   </ul></td>
 </tr></table>
@@ -7051,7 +7059,7 @@
 </li>
         <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Trace.block">(evmspec.trace.reward.Trace property)</a>
 </li>
-        <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Type.block">(evmspec.trace.reward.Type attribute)</a>
+        <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Type.block">(evmspec.trace.reward.Type attribute)</a>, <a href="source/evmspec.trace.html#id9">[1]</a>
 </li>
         <li><a href="source/evmspec.trace.html#evmspec.trace.suicide.Trace.block">(evmspec.trace.suicide.Trace property)</a>
 </li>
@@ -7270,9 +7278,9 @@
       </ul></li>
       <li><a href="source/evmspec.html#evmspec.data.Address.checksum">checksum() (evmspec.data.Address class method)</a>
 </li>
-      <li><a href="source/evmspec.trace.html#evmspec.trace.create.Result.code">code (evmspec.trace.create.Result attribute)</a>
+      <li><a href="source/evmspec.trace.html#evmspec.trace.create.Result.code">code (evmspec.trace.create.Result attribute)</a>, <a href="source/evmspec.trace.html#id3">[1]</a>
 </li>
-      <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.coinbase">coinbase (evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id150">[1]</a>
+      <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.coinbase">coinbase (evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id152">[1]</a>
 
       <ul>
         <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.coinbase">(evmspec.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id0">[1]</a>
@@ -7501,7 +7509,7 @@
       <ul>
         <li><a href="source/evmspec.html#evmspec.block.MinedBlock.difficulty">(evmspec.block.MinedBlock attribute)</a>
 </li>
-        <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.difficulty">(evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id151">[1]</a>
+        <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.difficulty">(evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id153">[1]</a>
 </li>
         <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.difficulty">(evmspec.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id21">[1]</a>
 </li>
@@ -7677,7 +7685,7 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/evmspec.html#evmspec.receipt.Status.failure">failure (evmspec.receipt.Status attribute)</a>
+      <li><a href="source/evmspec.html#evmspec.receipt.Status.failure">failure (evmspec.receipt.Status attribute)</a>, <a href="source/evmspec.html#id26">[1]</a>
 </li>
       <li><a href="source/evmspec.html#evmspec.receipt.FeeStats">FeeStats (class in evmspec.receipt)</a>
 </li>
@@ -7691,6 +7699,8 @@
         <li><a href="source/evmspec.html#evmspec.TransactionReceipt.feeStats">(evmspec.TransactionReceipt property)</a>
 </li>
       </ul></li>
+      <li><a href="source/evmspec.trace.html#evmspec.trace.FilterTrace">FilterTrace (in module evmspec.trace)</a>
+</li>
       <li><a href="source/evmspec.html#evmspec.data.Address.find">find() (evmspec.data.Address method)</a>
 
       <ul>
@@ -8185,7 +8195,7 @@
         <li><a href="source/evmspec.html#evmspec.TransactionRLP.indexInParent">(evmspec.TransactionRLP attribute)</a>
 </li>
       </ul></li>
-      <li><a href="source/evmspec.trace.html#evmspec.trace.create.Action.init">init (evmspec.trace.create.Action attribute)</a>
+      <li><a href="source/evmspec.trace.html#evmspec.trace.create.Action.init">init (evmspec.trace.create.Action attribute)</a>, <a href="source/evmspec.trace.html#id1">[1]</a>
 </li>
       <li><a href="source/evmspec.trace.html#evmspec.trace.call.Action.input">input (evmspec.trace.call.Action attribute)</a>
 
@@ -9006,7 +9016,7 @@
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/evmspec.trace.html#evmspec.trace.call.Result.output">output (evmspec.trace.call.Result attribute)</a>
+      <li><a href="source/evmspec.trace.html#evmspec.trace.call.Result.output">output (evmspec.trace.call.Result attribute)</a>, <a href="source/evmspec.trace.html#id0">[1]</a>
 </li>
   </ul></td>
 </tr></table>
@@ -9025,7 +9035,7 @@
 </li>
         <li><a href="source/evmspec.html#evmspec.block.ShanghaiCapellaBlock.parentHash">(evmspec.block.ShanghaiCapellaBlock attribute)</a>
 </li>
-        <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.parentHash">(evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id152">[1]</a>
+        <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.parentHash">(evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id154">[1]</a>
 </li>
         <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.parentHash">(evmspec.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id22">[1]</a>
 </li>
@@ -9215,12 +9225,12 @@
       <li><a href="source/evmspec.trace.html#evmspec.trace.call.Trace.result">result (evmspec.trace.call.Trace attribute)</a>
 
       <ul>
-        <li><a href="source/evmspec.trace.html#evmspec.trace.create.Trace.result">(evmspec.trace.create.Trace attribute)</a>
+        <li><a href="source/evmspec.trace.html#evmspec.trace.create.Trace.result">(evmspec.trace.create.Trace attribute)</a>, <a href="source/evmspec.trace.html#id4">[1]</a>
 </li>
-        <li><a href="source/evmspec.trace.html#evmspec.trace.suicide.Trace.result">(evmspec.trace.suicide.Trace attribute)</a>
+        <li><a href="source/evmspec.trace.html#evmspec.trace.suicide.Trace.result">(evmspec.trace.suicide.Trace attribute)</a>, <a href="source/evmspec.trace.html#id12">[1]</a>
 </li>
       </ul></li>
-      <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Action.rewardType">rewardType (evmspec.trace.reward.Action attribute)</a>
+      <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Action.rewardType">rewardType (evmspec.trace.reward.Action attribute)</a>, <a href="source/evmspec.trace.html#id7">[1]</a>
 </li>
       <li><a href="source/evmspec.html#evmspec.data.Address.rfind">rfind() (evmspec.data.Address method)</a>
 
@@ -9264,7 +9274,7 @@
         <li><a href="source/evmspec.html#evmspec.log.Topic.rjust">(evmspec.log.Topic method)</a>
 </li>
       </ul></li>
-      <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.root">root (evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id153">[1]</a>
+      <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.root">root (evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id155">[1]</a>
 
       <ul>
         <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.root">(evmspec.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id23">[1]</a>
@@ -9484,7 +9494,7 @@
         <li><a href="source/evmspec.trace.html#evmspec.trace.suicide.Trace.subtraces">(evmspec.trace.suicide.Trace attribute)</a>
 </li>
       </ul></li>
-      <li><a href="source/evmspec.html#evmspec.receipt.Status.success">success (evmspec.receipt.Status attribute)</a>
+      <li><a href="source/evmspec.html#evmspec.receipt.Status.success">success (evmspec.receipt.Status attribute)</a>, <a href="source/evmspec.html#id27">[1]</a>
 </li>
       <li><a href="source/evmspec.html#evmspec.data.Address.swapcase">swapcase() (evmspec.data.Address method)</a>
 
@@ -9517,7 +9527,7 @@
 </li>
         <li><a href="source/evmspec.html#evmspec.block.TinyBlock.timestamp">(evmspec.block.TinyBlock attribute)</a>
 </li>
-        <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.timestamp">(evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id154">[1]</a>
+        <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.timestamp">(evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id156">[1]</a>
 </li>
         <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.timestamp">(evmspec.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id24">[1]</a>
 </li>
@@ -9873,11 +9883,11 @@
 </li>
         <li><a href="source/evmspec.trace.html#evmspec.trace.call.Trace.type">(evmspec.trace.call.Trace attribute)</a>
 </li>
-        <li><a href="source/evmspec.trace.html#evmspec.trace.create.Trace.type">(evmspec.trace.create.Trace attribute)</a>
+        <li><a href="source/evmspec.trace.html#evmspec.trace.create.Trace.type">(evmspec.trace.create.Trace attribute)</a>, <a href="source/evmspec.trace.html#id5">[1]</a>
 </li>
-        <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Trace.type">(evmspec.trace.reward.Trace attribute)</a>
+        <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Trace.type">(evmspec.trace.reward.Trace attribute)</a>, <a href="source/evmspec.trace.html#id8">[1]</a>
 </li>
-        <li><a href="source/evmspec.trace.html#evmspec.trace.suicide.Trace.type">(evmspec.trace.suicide.Trace attribute)</a>
+        <li><a href="source/evmspec.trace.html#evmspec.trace.suicide.Trace.type">(evmspec.trace.suicide.Trace attribute)</a>, <a href="source/evmspec.trace.html#id13">[1]</a>
 </li>
         <li><a href="source/evmspec.html#evmspec.transaction.Transaction1559.type">(evmspec.transaction.Transaction1559 attribute)</a>
 </li>
@@ -9966,9 +9976,9 @@
 </li>
       <li><a href="source/evmspec.html#evmspec.uints.uint96">uint96 (class in evmspec.uints)</a>
 </li>
-      <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Type.uncle">uncle (evmspec.trace.reward.Type attribute)</a>
+      <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Type.uncle">uncle (evmspec.trace.reward.Type attribute)</a>, <a href="source/evmspec.trace.html#id10">[1]</a>
 </li>
-      <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.uncleHash">uncleHash (evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id155">[1]</a>
+      <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.uncleHash">uncleHash (evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id157">[1]</a>
 
       <ul>
         <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.uncleHash">(evmspec.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id25">[1]</a>
