--- a/_modules/evmspec/trace/create.html
+++ b/_modules/evmspec/trace/create.html
@@ -91,18 +91,50 @@
 
 <span class="sd">    This class captures the initialization code necessary for deploying a</span>
 <span class="sd">    new contract on the Ethereum Virtual Machine (EVM).</span>
+
+<span class="sd">    Attributes:</span>
+<span class="sd">        init (HexBytes): The init code for the deployed contract.</span>
+
+<span class="sd">    Examples:</span>
+<span class="sd">        &gt;&gt;&gt; action = Action(init=HexBytes(&quot;0x6000600055&quot;))</span>
+<span class="sd">        &gt;&gt;&gt; action.init</span>
+<span class="sd">        HexBytes(&#39;0x6000600055&#39;)</span>
+
+<span class="sd">    See Also:</span>
+<span class="sd">        - :class:`evmspec.trace._base._ActionBase`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="n">init</span><span class="p">:</span> <span class="n">HexBytes</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The init code for the deployed contract.&quot;&quot;&quot;</span></div>
 
 
-<div class="viewcode-block" id="Result"><a class="viewcode-back" href="../../../source/evmspec.trace.html#evmspec.trace.create.Result">[docs]</a><span class="k">class</span> <span class="nc">Result</span><span class="p">(</span><span class="n">_ResultBase</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+<div class="viewcode-block" id="Result"><a class="viewcode-back" href="../../../source/evmspec.trace.html#evmspec.trace.create.Result">[docs]</a><span class="k">class</span> <span class="nc">Result</span><span class="p">(</span>
+    <span class="n">_ResultBase</span><span class="p">,</span>
+    <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+<span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Represents the result of a contract creation action.</span>
 
 <span class="sd">    It includes details such as the address and bytecode of the newly</span>
 <span class="sd">    deployed contract. This information is essential for verifying the</span>
 <span class="sd">    deployment was successful and retrieving the contract&#39;s code.</span>
+
+<span class="sd">    Attributes:</span>
+<span class="sd">        address (Address): The address of the deployed contract.</span>
+<span class="sd">        code (HexBytes): The bytecode of the deployed contract.</span>
+
+<span class="sd">    Examples:</span>
+<span class="sd">        &gt;&gt;&gt; result = Result(address=Address(&quot;0x1234567890abcdef1234567890abcdef12345678&quot;), code=HexBytes(&quot;0x6000600055&quot;))</span>
+<span class="sd">        &gt;&gt;&gt; result.address</span>
+<span class="sd">        &#39;0x1234567890abcdef1234567890abcdef12345678&#39;</span>
+<span class="sd">        &gt;&gt;&gt; result.code</span>
+<span class="sd">        HexBytes(&#39;0x6000600055&#39;)</span>
+
+<span class="sd">    See Also:</span>
+<span class="sd">        - :class:`evmspec.trace._base._ResultBase`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="n">address</span><span class="p">:</span> <span class="n">Address</span>
@@ -123,9 +155,26 @@
 <span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Represents a trace of a contract deployment.</span>
 
-<span class="sd">    Provides a detailed trace structure which includes both raw and decoded</span>
-<span class="sd">    versions of the action data used during the contract deployment on the</span>
-<span class="sd">    Ethereum network.</span>
+<span class="sd">    Provides a detailed trace structure which includes raw action data</span>
+<span class="sd">    and a method to decode this data into a structured :class:`Action` object</span>
+<span class="sd">    representing the specific details of the contract creation process.</span>
+
+<span class="sd">    Attributes:</span>
+<span class="sd">        type (ClassVar[Literal[&quot;create&quot;]]): The type of trace, fixed as &quot;create&quot;.</span>
+<span class="sd">        _action (Raw): The raw create action data, following the parity format.</span>
+<span class="sd">        result (Result): The result object, adhering to the parity format, containing deployment details.</span>
+
+<span class="sd">    Examples:</span>
+<span class="sd">        &gt;&gt;&gt; trace = Trace(_action=Raw(b&#39;{&quot;init&quot;:&quot;0x6000600055&quot;}&#39;), result=Result(address=Address(&quot;0x1234567890abcdef1234567890abcdef12345678&quot;), code=HexBytes(&quot;0x6000600055&quot;)))</span>
+<span class="sd">        &gt;&gt;&gt; trace.type</span>
+<span class="sd">        &#39;create&#39;</span>
+<span class="sd">        &gt;&gt;&gt; trace.action.init</span>
+<span class="sd">        HexBytes(&#39;0x6000600055&#39;)</span>
+
+<span class="sd">    See Also:</span>
+<span class="sd">        - :class:`evmspec.trace._base._FilterTraceBase`</span>
+<span class="sd">        - :class:`Action`</span>
+<span class="sd">        - :class:`Result`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="nb">type</span><span class="p">:</span> <span class="n">ClassVar</span><span class="p">[</span><span class="n">Literal</span><span class="p">[</span><span class="s2">&quot;create&quot;</span><span class="p">]]</span> <span class="o">=</span> <span class="s2">&quot;create&quot;</span>
@@ -135,11 +184,16 @@
 
     <span class="nd">@cached_property</span>
     <span class="k">def</span> <span class="nf">action</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Action</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;Decodes the raw action data into an Action object using parity style.</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Decodes the raw action data into an :class:`Action` object.</span>
 
 <span class="sd">        Utilizes the `_action` field for decoding, transforming it into a</span>
-<span class="sd">        structured Action object that represents the specific details</span>
+<span class="sd">        structured :class:`Action` object that represents the specific details</span>
 <span class="sd">        of the contract creation process.</span>
+
+<span class="sd">        Examples:</span>
+<span class="sd">            &gt;&gt;&gt; trace = Trace(_action=Raw(b&#39;{&quot;init&quot;:&quot;0x6000600055&quot;}&#39;), result=Result(address=Address(&quot;0x1234567890abcdef1234567890abcdef12345678&quot;), code=HexBytes(&quot;0x6000600055&quot;)))</span>
+<span class="sd">            &gt;&gt;&gt; trace.action.init</span>
+<span class="sd">            HexBytes(&#39;0x6000600055&#39;)</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">json</span><span class="o">.</span><span class="n">decode</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_action</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="n">Action</span><span class="p">,</span> <span class="n">dec_hook</span><span class="o">=</span><span class="n">_decode_hook</span><span class="p">)</span>
 
